--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ html, body {
     margin: 0;
     padding: 0;
 }
+h5{
+  margin: 0px;
+  padding-top: 15px;
+}
+
 .outer-container {
     display: flex;
     justify-content: center;
@@ -99,7 +104,7 @@ a {
     }
     
     .card-footer {
-      margin-top: 50px;
+      margin-top: 40px;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -120,7 +125,7 @@ a {
     
     .card-btnEliminar{
       height: 25px;
-      background: rgb(234, 89, 89);
+      background: none;
       border: 1px solid var(--main-color);
       border-radius: 5px;
       padding: 0 15px;
@@ -135,9 +140,9 @@ a {
       transition: all 0.3s;
     }
   
-    .card-img:hover {
-      transform: translateY(-3px);
-   
+    .card-btnEliminar:hover {
+      text-decoration:underline;
+      color: #2d8cf0;
     }
     
     .card-btnEliminar:hover {
@@ -156,7 +161,7 @@ a {
     .card-btn {
       height: 35px;
       background: var(--bg-color);
-      border: 2px solid var(--main-color);
+      border: #e5e7eb solid;
       border-radius: 5px;
       padding: 0 15px;
       transition: all 0.3s;
@@ -280,3 +285,41 @@ body {
    sans-serif; 
    --font-sans-serif: 'Manrope'; 
   } 
+  
+.btnCompra {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 7px;
+  gap: 15px;
+  background-color: #181717;
+  outline: 1px #181717 solid;
+  outline-offset: -3px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: 400ms;
+}
+
+.btnCompra .text {
+  color: white;
+  font-weight: 700;
+  font-size: 1em;
+  transition: 400ms;
+}
+
+.btnCompra svg path {
+  transition: 400ms;
+}
+
+.btnCompra:hover {
+  background-color: transparent;
+}
+
+.btnCompra:hover .text {
+  color: #181717;
+}
+
+.btnCompra:hover svg path {
+  fill: #181717;
+}
