--- a/styles.css
+++ b/styles.css
@@ -328,3 +328,43 @@ body {
   width: 60px;
   height: 35px;
 }
+
+
+.logo1 {
+  width: 27px;
+  height: 27px;
+}
+.logo {
+  width: 60px;
+  height: 35px;
+}
+
+.navbar img {
+  width: 27px;
+  height: 27px;
+}
+
+.ShoppingCard{
+margin-top: 5px;
+} 
+.card {
+    --font-color: #323232;
+    --font-color-sub: #666;
+    --bg-color: #ffffff;
+    --bg-color: #ffffff39;
+    --main-color: #323232;
+    --main-focus: #2d8cf0;
+    width: 226px;
+    height: 300px;
+    background: var(--bg-color);
+    border-radius: 5px;
+    overflow: hidden;
+    justify-content: flex-start;
+    padding: 20px;
+    gap: 10px;
+    margin: 5px;
+    border: #e5e7eb solid;
+    margin-left: 3rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
